# rustberrypie

./: .gitignore  Cargo.toml  Makefile  README.md  kernel7.img  linker.ld  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: rust.yml
src/: cpu.rs  gpio_pins.rs  main.rs  memory.rs
