[package]
name = "rustberrypie"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false
description = "rustberrypie blinks an LED connected to port 21, using raspberry pi's GPIO pins."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kernel"
path = "src/main.rs"
test = false
bench = false

[profile.release]
opt-level = "z"
strip = "debuginfo"
debug-assertions = false
overflow-checks = false
lto = false
codegen-units = 1
incremental = false
